compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/Compliance_Agent_Context__mdt.object-meta.xml
<CustomObject>
    <description>Defines an object and field set whose data is provided as context to a Comliance Agent Setting.</description>
    <label>Compliance Agent Context</label>
    <pluralLabel>Compliance Agent Contexts</pluralLabel>
</CustomObject>