compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/fields/Compliance_Agent_Setting__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Agent_Setting__c</fullName>
    <description>References the parent Compliance Agent Setting that owns this context configuration.</description>
    <inlineHelpText>Select the Compliance Agent Setting to which this context record belongs.</inlineHelpText>
    <label>Compliance Agent Setting</label>
    <referenceTo>Compliance_Agent_Setting__mdt</referenceTo>
    <relationshipLabel>Compliance Agent Contexts</relationshipLabel>
    <relationshipName>Compliance_Agent_Contexts</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>