compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/fields/Context_Object__c.field-meta.xml
<CustomField>
    <fullName>Context_Object__c</fullName>
    <description>Specifies the Salesforce object that provides data to the compliance review context.</description>
    <inlineHelpText>Select the Salesforce object whose field set will be used to build the context provided to the Compliance Agent.</inlineHelpText>
    <label>Context Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Contexts</relationshipLabel>
    <relationshipName>Compliance_Agent_Contexts</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>