compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/fields/Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Set__c</fullName>
    <description>Stores the API name of the field set that defines which fields must be included from the selected context object.</description>
    <inlineHelpText>Enter the API name of a field set created on the selected Context Object. Use the field set API name, not its label.</inlineHelpText>
    <label>Field Set</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>