compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/fields/Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Filter_Criteria__c</fullName>
    <description>Optional additional SOQL WHERE condition applied when querying this Context&apos;s records, in addition to the Relationship Field match. Must reference fields on the Context Object (or its direct relationships).</description>
    <inlineHelpText>Example: RecordType.DeveloperName = &apos;Enterprise_Deal&apos; or StageName != &apos;Closed Lost&apos;. Leave blank to include all related records.</inlineHelpText>
    <label>Filter Criteria</label>
    <type>TextArea</type>
</CustomField>