compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>Field on the Context Object that relates its records back to the Source Object or Target Object defined in the parent Compliance Agent Setting. Used to filter which context records are queried during the compliance analysis.</description>
    <inlineHelpText>Select the lookup or master-detail field on this object that points to either the Source Object or the Target Object of the related Compliance Agent Setting. Required whenever this Context should be filtered by the current record.</inlineHelpText>
    <label>Relationship Field</label>
    <metadataRelationshipControllingField>Compliance_Agent_Context__mdt.Context_Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Compliance_Agent_Contexts</relationshipLabel>
    <relationshipName>Compliance_Agent_Contexts</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>