compliance-reviewer/main/default/objects/Compliance_Agent_Context__mdt/listViews/My_Contexts_View.listView-meta.xml
<ListView>
    <fullName>My_Contexts_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Context_Object__c</columns>
    <columns>Field_Set__c</columns>
    <columns>Parent_Context_Object__c</columns>
    <columns>Compliance_Agent_Setting__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Contexts View</label>
    <language>en_US</language>
</ListView>